# Job-Aggregator

./: .gitignore  README.md  hh_parser.py  init_db.py  job_finder1.py  main.py  pyproject.toml  requirements.txt  test.py
db/: create_db.py  init_db.py  insert_values.py  pg_loader.py  utilities.py
etl/: config.py  hh.py  main.py  pg_loader.py  telegram.py  utils.py
etl/clients/: hh.py  utils.py
tests/: test.py
