[tool.poetry]
name = "job-aggregator"
version = "0.1.0"
description = ""
authors = ["BogdanovaMF <122004102+BogdanovaMF@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "job_aggregator"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
parsel = "1.7.0"
psycopg2-binary = "^2.9.5"
mypy = "^1.2.0"
telethon = "^1.28.5"
numpy = "^1.24.3"
pytest = "^7.3.1"
python-dotenv = "^1.0.0"
pylint = "^2.17.3"
apache-airflow = "^2.6.3"

[tool.poetry.group.dev.dependencies]
requests = "2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
